# gn-build

config/: BUILD.gn  BUILDCONFIG.gn
config/emscripten/: BUILD.gn
config/posix/pkg-config/: BUILD.gn  pkg-config.gni  pkg-config.py
toolchain/: compiler_version.gni  toolchain.gni
toolchain/emscripten/: BUILD.gn  emscripten.gni  emscripten_link_wrapper.py  emscripten_target.gni  httpserver.py  typescript_compile.py
toolchain/posix/gtk/: gresources_compile.py  gtk_target.gni
toolchain/posix/pkg-config/: pkg-config.gni
toolchain/posix/qt/: qt_target.gni  transpile.gni
toolchain/typescript/: BUILD.gn  typescript_compile_wrapper.py  typescript_link_wrapper.py  typescript_target.gni  typescript_target.gni.old
