import("//build/config/sanitizers/sanitizers.gni")
import("//build/toolchain/sysroot.gni")
import("//build/toolchain/emscripten/emscripten.gni")

declare_args() {
  pthread_pool_size = 1
}
assert(is_emscripten && pthread_pool_size > 0)

# This is included by reference in the //build/config/compiler config that
# is applied to all targets. It is here to separate out the logic that is
# emscripten-only.
config("compiler") {
  #Enable pthread by default -pthread is synonymous with -sUSE_PTHREADS=1
  #Do not add -fms-extensions flag to avoid _WIN32 define hint that breaks vscode intellisense
  cflags = [ "-pthread" ]
  defines = [ "__EMSCRIPTEN__" ]
  ldflags = [ "-lembind", "-pthread", "-sPTHREAD_POOL_SIZE=$pthread_pool_size", "-sEXPORTED_FUNCTIONS=['_malloc','_free']" ]
}

# This is included by reference in the //build/config/compiler:runtime_library
# config that is applied to all targets. It is here to separate out the logic
# that is emscripten-only. Please see that target for advice on what should go in
# :runtime_library vs. :compiler.
config("runtime_library") {
}

# Settings for executables.
config("executable_ldconfig") {
  ldflags = [ "-sEXPORTED_FUNCTIONS=['_main']" ]
}

# Settings for shared libraries.
config("shared_library_ldconfig") {
  ldflags = [ "-fPIC" ]
}

# Settings for main module
config("main_module_ldconfig") {
  ldflags = [ "-sMAIN_MODULE=2" ]
}

# Settings for side module
config("side_module_ldconfig") {
  ldflags = [ "-sSIDE_MODULE=2" ]
}

# Settings for fetch API
config("fetch_ldconfig") {
  ldflags = ["-sFETCH" ]
}

# Settings for extra functions
config("exported_runtime_ldconfig") {
  ldflags = [ "-sEXPORTED_RUNTIME_METHODS=['ccall','UTF8ToString']" ]
}