# Config template example

template("pkg_config_single") { # Hyphens in name aren't allowed
  config(target_name) {
    cflags_and_libs = exec_script("//build/config/posix/pkg-config/pkg-config.py", [ target_name ], "json")
    cflags = cflags_and_libs.cflags
    #Prefer libs instead of ldflags if these must be passed to dependents
    libs = cflags_and_libs.libs
  }

  not_needed(invoker, "*")
}